[gd_scene load_steps=21 format=3 uid="uid://c432kreb3ai8h"]

[ext_resource type="Script" path="res://scripts/boss.gd" id="1_783qf"]
[ext_resource type="Shader" path="res://shaders/flash.gdshader" id="2_8pip3"]
[ext_resource type="Texture2D" uid="uid://55y4rm3r2aci" path="res://assets/sprites/salmon/death.png" id="3_yuvba"]
[ext_resource type="Texture2D" uid="uid://dn2avujc7fkjq" path="res://assets/sprites/salmon/run.png" id="4_0huvd"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_a8rdp"]
resource_local_to_scene = true
shader = ExtResource("2_8pip3")
shader_parameter/flash_color = Color(1, 1, 1, 1)
shader_parameter/flash_modifier = 0.0

[sub_resource type="AtlasTexture" id="AtlasTexture_6unst"]
atlas = ExtResource("3_yuvba")
region = Rect2(1, 0, 47, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ouj7s"]
atlas = ExtResource("3_yuvba")
region = Rect2(48, 0, 47, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_q45tv"]
atlas = ExtResource("3_yuvba")
region = Rect2(95, 0, 47, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_4hgob"]
atlas = ExtResource("3_yuvba")
region = Rect2(142, 0, 47, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_fgxvf"]
atlas = ExtResource("3_yuvba")
region = Rect2(189, 0, 47, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_j2ye3"]
atlas = ExtResource("3_yuvba")
region = Rect2(236, 0, 47, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_x27n4"]
atlas = ExtResource("4_0huvd")
region = Rect2(1, 0, 47, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_fb33b"]
atlas = ExtResource("4_0huvd")
region = Rect2(48, 0, 47, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_671tu"]
atlas = ExtResource("4_0huvd")
region = Rect2(95, 0, 47, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_vy3bp"]
atlas = ExtResource("4_0huvd")
region = Rect2(142, 0, 47, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_724sp"]
atlas = ExtResource("4_0huvd")
region = Rect2(189, 0, 47, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_a1h0h"]
atlas = ExtResource("4_0huvd")
region = Rect2(236, 0, 47, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_dfvd7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6unst")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ouj7s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q45tv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4hgob")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fgxvf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j2ye3")
}],
"loop": false,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x27n4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fb33b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_671tu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vy3bp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_724sp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a1h0h")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2p368"]
size = Vector2(14, 30)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lnql0"]
size = Vector2(5, 15)

[node name="Boss" type="Node2D"]
script = ExtResource("1_783qf")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_a8rdp")
position = Vector2(5, -24)
sprite_frames = SubResource("SpriteFrames_dfvd7")
animation = &"death"
autoplay = "default"

[node name="RayCastRight" type="RayCast2D" parent="."]
position = Vector2(0, -7)
target_position = Vector2(12, 0)

[node name="RayCastLeft" type="RayCast2D" parent="."]
position = Vector2(0, -7)
target_position = Vector2(-12, 0)

[node name="hitbox" type="Area2D" parent="."]
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
position = Vector2(0, -15)
shape = SubResource("RectangleShape2D_2p368")

[node name="FlashTimer" type="Timer" parent="."]
wait_time = 0.065

[node name="Killzone" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Killzone"]
position = Vector2(0, -15)
scale = Vector2(2, 2)
shape = SubResource("RectangleShape2D_lnql0")

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(0, -9)

[connection signal="area_entered" from="hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="timeout" from="FlashTimer" to="." method="_on_flash_timer_timeout"]
[connection signal="body_entered" from="Killzone" to="." method="_on_killzone_body_entered"]
